--- a/Day01/exercise/index.html
+++ b/Day01/exercise/index.html
@@ -20,13 +20,12 @@
         These languages are the backbone of every website, defining structure,
         content, and presentation.
       </p>
-
       <img
         id="avatar-image"
         src="./assets/image-avatar.webp"
         alt="Avatar image"
       />
-      <span>Greg Hooper</span>
+      <span id="name">Greg Hooper</span>
     </div>
   </body>
 </html>
